test: update the constructors